--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,12 +4,39 @@
     <title>Tumblr</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Catamaran:400,700' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= favicon_link_tag 'https://github.com/CrashLearner/TumblrApp/blob/master/Images%20for%20Tumblr/favicon.ico.png?raw=true' %>
   </head>
 
   <body>
-    <%= yield %>
+    <div id="sidebar">
+      <ul>
+        <li class="category"><%= link_to "Tumblr", root_path %></li>
+        <li><%= link_to "Posts", root_path %></li>
+        <li>About</li>
+      </ul>
+
+      <p class="sign_in"> User Login</p>
+    </div>
+
+    <div id="main_content">
+      <div id="header">
+        <p>Post Feed</p>
+        <div class="buttons">
+          <button class="button"> <%= link_to "Make Post", new_post_path %></button>
+          <button class="button"> Log Out</button>
+        </div>
+      </div>
+
+      <% flash.each do |name,msg| %>
+        <%= content_tag(:div,msg, class:"alert") %>
+      <% end %> 
+      
+      <%= yield %>
+
+    </div>
+
   </body>
 </html>
