creating messages error on new

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,9 +4,9 @@
     <title>Tumblr</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Catamaran:400,700' %>
+    <%= stylesheet_link_tag 'application', 'http://fonts.googleapis.com/css?family=Raleway:400,700' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track'=>true %>
     <%= favicon_link_tag 'https://github.com/CrashLearner/TumblrApp/blob/master/Images%20for%20Tumblr/favicon.ico.png?raw=true' %>
   </head>
 
